tests/ui/not_enum.stderr
error: input must be an enum
 --> $DIR/not_enum.rs:3:10
  |
3 | #[derive(SerializeRepr)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
